# bazel_samples

./: .gitignore  MODULE.bazel  Makefile  README.md  WORKSPACE  functions.bzl
Bullseye-iOS/: BUILD
Bullseye-iOS/Bullseye/App/: Info.plist
HelloBazel/: BUILD
HelloBazel/src/main/java/com/example/: KnockKnock.java
PodSampleProj/: BUILD  Podfile
PodSampleProj/PodSampleProj/: Info.plist  ViewController.swift
PodSampleProj/PodSampleProj.xcodeproj/: project.pbxproj
PodSampleProj/PodSampleProj.xcworkspace/: contents.xcworkspacedata
SwiftUISampleProj/: BUILD
SwiftUISampleProj/SwiftUISampleProj/: ContentView.swift  Info.plist  SwiftUISampleProjApp.swift
SwiftUISampleProj/SwiftUISampleProj.xcodeproj/: project.pbxproj
SwiftUISampleProj/SwiftUISampleProjTests/: SwiftUISampleProjTests.swift
SwiftUISampleProj/SwiftUISampleProjUITests/: SwiftUISampleProjUITests.swift  SwiftUISampleProjUITestsLaunchTests.swift
